# ChangeLog for media-libs/mesa
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.388 2012/03/04 21:09:15 chithanh Exp $

  04 Mar 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -mesa-8.0.1-r1.ebuild:
  Drop broken revision, bug #406641.

  04 Mar 2012; Justin Lecher <jlec@gentoo.org> mesa-7.9.2.ebuild,
  mesa-7.10.3.ebuild, mesa-7.11.ebuild, mesa-7.11.2.ebuild:
  block x11-libs/libGLw with USE=motif

*mesa-8.0.1-r2 (03 Mar 2012)

  03 Mar 2012; Luca Barbato <lu_zero@gentoo.org> mesa-8.0.1-r1.ebuild,
  +mesa-8.0.1-r2.ebuild:
  Revert header placement

*mesa-8.0.1-r1 (02 Mar 2012)

  02 Mar 2012; Luca Barbato <lu_zero@gentoo.org> +mesa-8.0.1-r1.ebuild:
  Support switching GLES implementations as well, fix bug #406501

  24 Feb 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  mesa-8.0.1.ebuild:
  Fix patching failure, reported by ryao on IRC.

*mesa-8.0.1 (24 Feb 2012)

  24 Feb 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +mesa-8.0.1.ebuild, +files/eselect-mesa.conf.8.0.1:
  Version bump, bug #405207.

  19 Feb 2012; Raúl Porcel <armin76@gentoo.org> mesa-7.11.2.ebuild:
  alpha/ia64/sh/sparc stable wrt #394393

  15 Feb 2012; Brent Baude <ranger@gentoo.org> mesa-7.11.2.ebuild:
  Marking mesa-7.11.2 ppc stable for bug 394393

  11 Feb 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  mesa-8.0.ebuild:
  switch to xorg-x11 and back if necessary, bug #374647 comment 11

*mesa-8.0 (10 Feb 2012)

  10 Feb 2012; Matt Turner <mattst88@gentoo.org> +mesa-8.0.ebuild,
  +files/mesa-8.0-dont-require-llvm-for-r300.patch,
  +files/eselect-mesa.conf.8.0, metadata.xml:
  Version bump. Move to EAPI4. New USE flags gles1, gles2, wayland, g3dvl,
  vdpau, xvmc, and d3d. New split VIDEO_CARDS: i915, i965, r100, r200, r300,
  r600. Fixes bugs 308497, 377013, 380303.

  27 Dec 2011; Markus Meier <maekke@gentoo.org> mesa-7.11.2.ebuild:
  x86 stable, bug #394393
