@@ -21,6 +21,7 @@
 	<flag name='shared-glapi'>Enable sharing of common code for the OpenGL API.</flag>
 	<flag name='vdpau'>Enable the VDPAU acceleration interface for the Gallium3D Video Layer.</flag>
 	<flag name='wayland'>Enable support for dev-libs/wayland</flag>
+	<flag name='xa'>Enable the XA (X Acceleration) API for Gallium3D.</flag>
 	<flag name='xvmc'>Enable the XvMC acceleration interface for the Gallium3D Video Layer.</flag>
 </use>
 </pkgmetadata>
