@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/mesa
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.388 2012/03/04 21:09:15 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.389 2012/03/14 16:59:58 chithanh Exp $
+
+  14 Mar 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  mesa-8.0.1-r2.ebuild, metadata.xml:
+  Add USE flag for XA architecture.
 
   04 Mar 2012; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
   -mesa-8.0.1-r1.ebuild:
